--- a/backend/app/template/index.html
+++ b/backend/app/template/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>consultorio omega</title>
+	<title>Cadastro de Cliente</title>
+	<style>
+		form {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		input, select {
+			margin-bottom: 10px;
+			padding: 5px;
+			border-radius: 5px;
+			border: 1px solid #ccc;
+			width: 300px;
+			font-size: 16px;
+		}
+		input[type="submit"] {
+			background-color: #4CAF50;
+			color: white;
+			cursor: pointer;
+		}
+	</style>
 </head>
 <body>
-    <H1>Heloworld</H1>
-</body>
-</html>
+	<h1>Cadastro de Cliente</h1>
+	<form>
+		
+
+		<label for="nome">Nome:</label>
+		<input type="text" id="nome" name="nome" required>
+
+		<label for="data_nascimento">Data de Nascimento:</label>
+		<input type="date" id="data_nascimento" name="data_nascimento" required>
+
+		<label for="sexo">Sexo:</label>
+		<select id="sexo" name="sexo" required>
+			<option value="">Selecione o sexo</option>
+			<option value="F">Feminino</option>
+			<option value="M">Masculino</option>
+			<option value="O">Outro</option>
+		</select>
+
+		<label for="email">E-mail:</label>
+		<input type="email" id="email" name="email" required>
+
+		<label for="telefone">Telefone:</label>
+		<input type="tel" id="telefone" name="telefone" required>
+
+		<label for="senha">Senha:</label>
+		<input type="password" id="senha" name="senha" required>
+
+		<input type="submit" value="Cadastrar">
+	</form>
