--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -1,1 +1,69 @@
-<h1>Consultorio Omega</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- style -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='') }}">
+
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+
+    <title>Consultorio Omega | Testes</title>
+</head>
+<body>
+<div class="span position-relative ">
+    <div class="position-absolute top-50 start-50 translate-middle-x">
+
+    <div class="card text-bg-light d-flex align-content-center" style="max-width: 50rem;">
+            <div class="card-header text-center">Novo Cadastro</div>
+            <div class="card-body">
+              <form class="" action="/signup" method="POST">
+                  <div class="input-group mb-3">
+                      <span class="input-group-text">Nome</span>
+                      <input id="nome" required name = "nome"type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                  </div>
+                  <div class="input-group mb-3">
+                      <span class="input-group-text">Data da Nascimento</span>
+                      <input id="dt_nasc" required name = "dt_nasc" type="date" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                  </div>
+                  <div class="input-group mb-3">
+                      <span class="input-group-text">E-mail</span>
+                      <input id="email" required name = "email" type="email" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                  </div>
+                  <div class="input-group mb-3">
+                    <span class="input-group-text">Endereço</span>
+                    <input id="endereco" required name = "endereco" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                </div>
+                  <div class="input-group mb-3">
+                      <lab class="input-group-text">Celular</lab>
+                      <input id="celular" name = "celular" type="phone" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                  </div>
+                  <div class="input-group mb-3">
+                      <span class="input-group-text">telefone</span>
+                      <input id="telefone" name = "telefone" type="phone" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                  </div>
+                  <div class="input-group mb-3">
+                      <span class="input-group-text">Sexo</span>
+                      <input id="sexo" required name = "sexo" type="text" class="form-control" aria-label="Sizing example input " aria-describedby="inputGroup-sizing-default">
+                  </div>
+                  <div class="input-group mb-3">
+                      <span class="input-group-text">CPF</span>
+                      <input id="cpf" required name = "cpf" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                  </div>
+                  <div class="input-group mb-3">
+                      <span class="input-group-text">Senha</span>
+                      <input id="senha" required name = "senha" type="password" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                  </div>
+                  <button  type="submit" class="btn btn-primary botaologin">Cadastrar</button>
+              </form>
+        </div>
+    </div>
+    </div>
+</div>  
+</body>
+</html>
