--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -22,14 +22,14 @@
     <div class="card text-bg-light d-flex align-content-center" style="max-width: 50rem;">
             <div class="card-header text-center">Novo Cadastro</div>
             <div class="card-body">
-              <form class="" action="/signup" method="POST">
+              <form class="" action="/cadastrar" method="POST">
                   <div class="input-group mb-3">
                       <span class="input-group-text">Nome</span>
                       <input id="nome" required name = "nome"type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                   </div>
                   <div class="input-group mb-3">
                       <span class="input-group-text">Data da Nascimento</span>
-                      <input id="dt_nasc" required name = "dt_nasc" type="date" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                      <input id="data_nascimento" required name = "dt_nasc" type="date" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                   </div>
                   <div class="input-group mb-3">
                       <span class="input-group-text">E-mail</span>
@@ -39,10 +39,10 @@
                     <span class="input-group-text">Endereço</span>
                     <input id="endereco" required name = "endereco" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                 </div>
-                  <div class="input-group mb-3">
+                  <!-- <div class="input-group mb-3">
                       <lab class="input-group-text">Celular</lab>
                       <input id="celular" name = "celular" type="phone" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-                  </div>
+                  </div> -->
                   <div class="input-group mb-3">
                       <span class="input-group-text">telefone</span>
                       <input id="telefone" name = "telefone" type="phone" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
