--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -29,16 +29,20 @@
                   </div>
                   <div class="input-group mb-3">
                       <span class="input-group-text">Data da Nascimento</span>
-                      <input id="data_nascimento" required name = "dt_nasc" type="date" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                      <input id="data_nascimento" required name = "data_nascimento" type="date" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                   </div>
                   <div class="input-group mb-3">
-                      <span class="input-group-text">E-mail</span>
-                      <input id="email" required name = "email" type="email" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-                  </div>
-                  <div class="input-group mb-3">
+                      <span class="input-group-text">Sexo</span>
+                      <input id="sexo" required name = "sexo" type="text" class="form-control" aria-label="Sizing example input " aria-describedby="inputGroup-sizing-default">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">E-mail</span>
+                        <input id="email" required name = "email" type="email" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                    </div>
+                  <!-- <div class="input-group mb-3">
                     <span class="input-group-text">Endereço</span>
                     <input id="endereco" required name = "endereco" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-                </div>
+                </div> -->
                   <!-- <div class="input-group mb-3">
                       <lab class="input-group-text">Celular</lab>
                       <input id="celular" name = "celular" type="phone" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
@@ -47,14 +51,10 @@
                       <span class="input-group-text">telefone</span>
                       <input id="telefone" name = "telefone" type="phone" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                   </div>
-                  <div class="input-group mb-3">
-                      <span class="input-group-text">Sexo</span>
-                      <input id="sexo" required name = "sexo" type="text" class="form-control" aria-label="Sizing example input " aria-describedby="inputGroup-sizing-default">
-                  </div>
-                  <div class="input-group mb-3">
+                  <!-- <div class="input-group mb-3">
                       <span class="input-group-text">CPF</span>
                       <input id="cpf" required name = "cpf" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-                  </div>
+                  </div> -->
                   <div class="input-group mb-3">
                       <span class="input-group-text">Senha</span>
                       <input id="senha" required name = "senha" type="password" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
