add insert e delete tabela agenda

--- a/backend/app/template/agenda.html
+++ b/backend/app/template/agenda.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<h1>Agendamento</h1>
-	<form>
+	<form action="/agenda" method="POST">
 		
 
 		<label for="estado">estado:</label>
