--- a/frontend/src/components/Frase.module.css
+++ b/frontend/src/components/Frase.module.css
@@ -4,10 +4,7 @@
 }
 
 
-.imgHome{
-    width: 100px;
-    height: auto;
-}
+
 
 .imgCarousel{
     
@@ -21,4 +18,7 @@
 .navbar{
     margin: 0%;
     color: blue;
+
+    color: rgba(140, 198, 236, 0.603);
 }
+
