--- a/frontend/src/components/Frase.module.css
+++ b/frontend/src/components/Frase.module.css
@@ -22,3 +22,10 @@
     color: rgba(140, 198, 236, 0.603);
 }
 
+/* 
+img{
+    margin-top: 3%;
+    width: 100%;
+    height: 600px;
+    object-fit:scale-down
+} */
