--- a/frontend/src/pages/Home/index.css
+++ b/frontend/src/pages/Home/index.css
@@ -1,10 +1,22 @@
 .imgHome{
    
     width: 100%;
-    height: 600px;
+    height: 700px;
     object-fit:fill
 }
 
 .carousel-container{
     margin-top: 65px;
+}
+
+
+
+.texth2{
+    color: red;
+   font-style: italic;
+   font-size: 35px;
+}
+
+.texth5{
+    color: rgb(236, 236, 241);
 }
