--- a/frontend/src/pages/Home/index.css
+++ b/frontend/src/pages/Home/index.css
@@ -20,3 +20,10 @@
 .texth5{
     color: rgb(236, 236, 241);
 }
+
+footer{
+    background-color:rgb(110, 108, 108) ;
+    color: aliceblue;
+    padding: 10px;
+    text-align: center;
+}
