--- a/frontend/src/components/Frase.module.css
+++ b/frontend/src/components/Frase.module.css
@@ -1,10 +1,10 @@
-.fraseContainer{
+/* .fraseContainer{
     background-color: brown;
     border: 10px solid black;
-}
+} */
 
 
-
+/* 
 
 .imgCarousel{
     
@@ -12,13 +12,13 @@
     height: 600px;
     
     margin: 0%;
-}
+} */
 
-
+/* 
 .navbar{
     margin: 0%;
-    color: blue;
+    color: rgb(217, 255, 0);
 
     color: rgba(140, 198, 236, 0.603);
-}
+} */
 
