--- a/frontend/src/pages/Home/index.css
+++ b/frontend/src/pages/Home/index.css
@@ -1,16 +1,12 @@
 .imgHome{
    
     width: 100%;
-    height: 700px;
+    height: 650px;
     object-fit:fill
 }
 
-.carousel-container{
-    margin-top: 65px;
-}
 
-
-
+/* 
 .texth2{
     color: red;
    font-style: italic;
@@ -19,7 +15,7 @@
 
 .texth5{
     color: rgb(236, 236, 241);
-}
+} */
 
 footer{
     background-color:rgb(25, 104, 207) ;
@@ -27,4 +23,9 @@ footer{
     padding: 10px;
     text-align: center;
     height: 190px;
+}
+
+
+.cnt{
+    height: 40px;
 }
