--- a/frontend/src/pages/Home/index.css
+++ b/frontend/src/pages/Home/index.css
@@ -4,18 +4,23 @@
     
 }
 
-
-
-footer{
-    background-color:rgb(103, 115, 129) ;
-    color: rgb(250, 251, 252);
-    padding: 10px;
-    text-align: center;
-    height: 190px;
+.navtop a {
+    color: rgb(0, 0, 0);
+    font-weight:bolder;
+    font-size: 25px;
 }
 
 
-.page-container {
+  
+
+ footer{
+    background-color:rgb(103, 115, 129) ;
+    color: rgb(250, 251, 252);
+   
+} 
+
+
+/* .page-container {
     background-image: url('../../images/hero-bg.png');
     background-size: cover;
     background-position: center;
@@ -23,4 +28,36 @@ footer{
     display: flex;
     flex-direction: column;
   }
+   */
+
+.page-container {
+    background-image: url('../../images/hero-bg.png');
+    background-size: 100% auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+}
+  
+@media screen and (max-width: 768px) {
+    .page-container {
+      height: 100vh;
+    }
+}
+  
+
+
+@media screen and (max-width: 768px) {
+    .footer {
+      height: auto; 
+    }
+}
+  
+ 
+@media screen and (min-width: 768px) {
+    .footer {
+      height: 190px; 
+    }
+}
   
