--- a/frontend/src/pages/Contatos/index.css
+++ b/frontend/src/pages/Contatos/index.css
@@ -9,77 +9,6 @@
   margin-top: 150px;
 }  
 
-/* 
-.cardd{
-  position: relative;
-  width: 350px;
-  height: 250px;
-  background-color: #000;
-  overflow: hidden;
-}
-
-.cardd_image{
-  height: 100%;
-  height: 100%;
-  object-fit: cover;
-  scale: 1.15;
-  transition: opacity 0.25s,
-  scale 0.35s;
-
-}
-
-.cardd:hover  .cardd_image{
-  opacity: 0.5;
-  scale: 1;
-}
-
-.cardd_body{
-  position: absolute;
-  inset: 0;
-  padding: 50px;
-  color: #fff;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 15px;
-  justify-content: center;
-}
-
-.cardd_body::before{
-  content: "";
-  position: absolute;
-  inset: 20px;
-  border: 2px solid #fff;
-  opacity: 0;
-  scale: 1.25;
-  transition: opacity 0.25s, scale 1.25s;
-
-}
-
-.cardd:hover .cardd_body::before{
-  opacity: 1;
-  scale: 1;
-}
-
-.cardd_title{
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
-}
-
-.carddp{
-  font-size: 14px;
-  opacity: 0;
-  translate: -25px;
-  transition: opacity 0.25s,
-  translate 0.25s;
-}
-
-.cardd:hover .cardp{
-  opacity: 1;
-  translate: 0;
-} */
 .time{
  margin: 10px ;
 }
@@ -89,12 +18,16 @@
 }
 
 .card{
-  position: relative;
-  left: 0px;
+  width: 260px;
+  max-width: 300px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  
 }
-.card:not(:firstlateY){
-  margin-left: -50px;
-}
+
+
 
 .card:hover{
   transform: translateY(-20px);
