--- a/frontend/src/pages/Agendamento/index.css
+++ b/frontend/src/pages/Agendamento/index.css
@@ -1,9 +1,10 @@
 .form-container {
-    max-width: 500px;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: -380px auto 0;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: px solid #ccc;
     border-radius: 5px;
+    background-color: transparent;
 }
 
 .form-container h1 {
